<resources>
    <string name="app_name">hotstagram</string>
    <string name="facebook_app_id">305321734181232</string>
    <string name="fb_login_protocol_scheme">fb305321734181232</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_upload">Upload</string>
    <string name="title_basic">Basic</string>
    <string name="title_user">User</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="user_profile_content1">사진과 동영상을 공유하면 프로필에 표시됩니다.</string>
    <string name="user_profile_content2">첫 사진/동영상을 공유해보세요.</string>
    <string name="user_profile_content3">회원님이 나온 사진 및 \n "\u0020""\u0020""\u0020""\u0020""\u0020""\u0020""\u0020""\u0020""\u0020""\u0020""\u0020""\u0020"동영상</string>
    <string name="user_profile_content4">사람들이 회원님을 사진 및 동영상에 태그하면\n 태그된 사진 및 동영상이 여기에 표시됩니다.</string>
    <string name="default_notification_channel_id"> Channel ID </string>
    <string name="default_notification_channel_name" translatable="true"> Hotstagram </string>

    <string name="user_info_privacy">
    Hotstagram에 오신 것을 환영합니다! \n\n <br /><br /> 본 약관은 회원님의  Hotstagram 이용에 적용되며, 아래 설명된 Hotstagram 서비스에 관한 정보를 제공합니다. 회원님이 Hotstagram 계정을 만들거나 Hotstagram 이용하면 회원님은 본 약관에 동의하는 것입니다. <br /><br /> Instagram 서비스는 Facebook, Inc.에서 회원님에게 제공하는 Facebook 제품 중 하나입니다. 따라서 본 약관은 회원님과 Facebook, Inc. 사이의 계약을 구성합니다. \n\n\n\n\n\n Hotstagram 서비스 \n 당사는 회원님에게 Hotstagram 서비스를 제공하는 것에 동의합니다. 서비스에는 당사가 Hotstagram 사명을 실현하기 위해 제공하는 모든 Hotstagram 제품, 기능, 앱, 서비스, 기술 및 소프트웨어가 포함됩니다. 회원님이 관심 있는 사람들과 항목을 더 가까이 접할 수 있도록 서비스는 다음과 같은 요소(서비스)로 구성됩니다.\n\n 창작, 연결, 커뮤니케이션, 발견 및 공유를 위한 맞춤화된 기회를 제공합니다.\n<br /> 사람들은 다양합니다. 당사는 회원님이 실제로 관심을 가지는 경험을 공유함으로써 관계를 강화하길 원합니다. 따라서 당사는 회원님 및 다른 사람들이 관심 있는 사람과 사항을 파악하는 시스템을 구축하고 파악한 정보를 이용함으로써 회원님에게 중요한 경험을 창작하고, 발견하며, 동참하고, 공유하도록 합니다. 그 일환으로, 회원님 및 다른 사람들이 Hotstagram 안팎에서 하는 활동에 기초하여 회원님이 관심을 가질 만한 콘텐츠, 기능, 제안 및 계정을 더 잘 보여드리고, 회원님에게 Hotstagram 경험하는 방법을 제안하기도 합니다.\n\n 당사는 Hotstagram 커뮤니티 회원들이 도움을 필요로 한다고 생각하는 경우를 포함하여 회원들의 경험이 긍정적이고 포괄적일 수 있도록 도구를 개발하고 사용하고, 자원을 제공합니다. 또한 당사는 Hotstagram 약관 및 정책의 남용 및 위반을 포함하여 유해하고 사기적인 행위를 방지하기 위한 팀과 시스템을 갖추고 있습니다.\n\n\n\n\n 당사는 Hotstagram 플랫폼의 보안을 유지하기 위해 당사가 보유한 모든 정보(회원님의 정보 포함)를 이용합니다. 또한 당사는 오용 또는 유해 콘텐츠에 관한 정보를 다른 Facebook 계열사나 법 집행 기관과 공유할 수 있습니다. 또한 회원님이 사용하는 Facebook 계열사 제품과 상호 작용할 수 있는 방법을 제공하며, 회원님이 Facebook 계열사 제품 전반에서 일관적이고 원활한 경험을 얻을 수 있도록 하는 시스템을 설계했습니다.\n\n 글로벌 서비스를 제공하기 위해 당사는 회원님의 거주 국가 이외의 지역을 비롯하여 전 세계에 있는 시스템에 데이터를 저장하고 전송해야 합니다. 이 인프라는 Facebook, Inc., Facebook Ireland Limited 또는 그 계열사가 소유하거나 운영할 수 있습니다. 당사는 회원님에게 의미있다고 생각되는 광고, 제안 및 기타 홍보 콘텐츠를 보여드리기 위해 Hotstagram 및 다른 Facebook 계열사 제품의 정보 외에도 제삼자의 정보를 이용합니다.\n\n\n\n\n 그리고 이러한 콘텐츠가 회원님이 Instagram에서 경험하는 다른 모든 경험과 마찬가지로 관련성 있도록 노력합니다.
    </string>

    <string name="user_info_use">
    제 1 조 목적\n

    본 약관은 회원이 주식회사 PPU(이하 회사라 합니다.)가 운영하는 Hotstagram 에플리케이션 (Hotstagram, 이하 \u0022서비스\u0022라 합니다.)를 이용함에 있어 회원과 회사간의 권리, 의무 및책임사항, 하나의 ID 및 PASSWORD로 통합하여 이용하는데 따른 이용조건 및 절차 등 기본적인 사항을 규정함을 목적으로 합니다.\n



    \n제 2 조 약관의 효력 및 변경\n

    1. 이 약관은 서비스를 이용하고자 하는 모든 회원에 대하여 그 효력이 발생합니다.\n

    2. 이 약관의 내용은 서비스 화면에 게시하거나 기타의 방법으로 회원에게 공시하고, 이에 동의한 회원이 서비스에 가입함으로써 효력이 발생합니다.\n

    3. 회사는 필요하다고 인정되는 경우 사전 고지 없이 본 약관을 변경할 수 있으며, 약관이 변경된 경우에는 제2항과 같은 방법으로 공지함으로써 효력이 발생됩니다.\n

    4. 회원은 변경된 약관에 동의하지 않을 경우 회원 탈퇴를 요청할 수 있으며, 변경된 약관의 효력 발생일 이후에도 서비스를 계속 사용할 경우 약관의 변경 사항에 동의한 것으로 간주됩니다.\n



    \n제 3 조 약관 외 준칙\n

    본 약관에 명시되지 않은 사항은 상관행, 전기통신기본법, 전기통신사업법 및 기타 관련법령의규정에 의합니다. 유료서비스 이용자의 경우에는 유료서비스 이용약관 및 각각의 해당 유료서비스 이용약관에서 정하는 정책에 의거해 권리 및 의무를 보장·제한 받을 수 있습니다.\n



    \n제 4 조 용어의 정의\n

    이 약관에서 사용하는 용어의 정의는 다음과 같습니다.\n

    1. \u0022Hotstagram - 나만의 옷장\u0022이라 함은 회사가 제공하는 유료 서비스와 무료 서비스로 구성된 온라인 서비스를 말합니다.\n

    2. \u0022유료서비스\u0022라 함은 결제수단을 통해 Hotstagram - 나만의 옷장 서비스 이용에 필요한 결제를 한 후에 사용할 수 있는 부가서비스를 말합니다.\n

    3. \u0022무료서비스\u0022라 함은 유료서비스 외에 Hotstagram - 나만의 옷장 에서 제공하는 기본적인 서비스를 말합니다.\n

    4. \u0022회원\u0022이라 함은 회사와 서비스 이용계약을 체결하고 이용자 아이디를 부여받은 자를 말합니다.\n

    5. \u0022아이디(ID)\u0022라 함은 회원 식별과 회원의 서비스 이용을 위하여 회원이 선정하고 회사가 승인하는 문자와 숫자의 조합을 말합니다.\n

    6. \u0022비밀번호(PASSWORD)\u0022라 함은 회원의 비밀 보호를 위해 회원 자신이 설정한 문자와 숫자의 조합을 말합니다.\n

    7. \u0022운영자\u0022 서비스의 전반적인 관리와 원활한 운영을 위하여 회사에서 선정한 사람을 말합니다.\n

    8. \u0022해지\u0022라 함은 회사 또는 회원이 서비스 개통 후 이용계약을 해약하는 것을 말합니다.\n




    \n제 5 조 이용계약의 성립\n

    1. 서비스 가입 신청 시 본 약관을 읽고 \u0022동의함\u0022 버튼을 누르면 본 약관에 동의하는 것으로 간주됩니다.\n

    2. 이용계약은 서비스 이용 희망자의 이용약관 동의 후 이용 신청에 대하여 회사가 승낙함으로써 성립합니다.\n



    \n제 6 조 서비스 이용신청\n

    1. 이용신청은 회사가 요청하는 소정의 가입신청 양식에서 요구하는 아래와 같은 사항을 기록하여 신청합니다.\n

    ① 성명\n
    ② 아이디(ID)\n
    ③ 비밀번호(PASSWORD)\n
    ④ E-Mail 주소\n
    ⑤ 휴대폰번호\n
    ⑥ 생년월일\n
    ⑦ 성별\n

    2.온라인 가입신청 양식에 기재하는 모든 회원 정보는 실제 데이터인 것으로 간주합니다.\n

    3.실명이나 실제 정보를 입력하지 않은 사용자는 법적인 보호를 받을 수 없으며, 서비스 사용의 제한을 받을 수 있습니다.\n

    4.회사는 사용자의 광고, 허위, 미풍양속저해, 사회질서에 반하는 내용의 피드백을 확인한 경우 언제든 제재를 가하고 이용을 보류할수 있습니다.\n



    \n제 7 조 개인정보 보호\n

    회사는 개인정보보호에 관한 법률 및 그에 따른 시행규칙, 시행령 등 관계법령이 정하는 바에 따라 이용자 등록정보를 포함한 이용자의 개인정보를 보호하기 위해 노력합니다.\n
    이용자 개인정보의 보호 및 사용에 대해서는 관계법령 및 회사의 개인정보보호정책이 적용됩니다. 단, 이용자의 귀책사유로 인해 노출된 정보에 대해 회사는 일체의 책임을 지지 않습니다.\n



    \n제 8 조 이용신청의 승낙\n

    1. 회사는 제6조에 따른 이용신청에 대하여 특별한 사정이 없는 한 회사의 절차에 따라서 이용신청을 승인합니다.\n\n

    2. 회사는 아래와 같이 해당하는 경우 이용신청에 대한 승인을 제한할 수 있고, 그 사유가 해소될 까지 승인을 유보할 수 있습니다.\n\n

    ① 가입 신청자가 본 약관 의거하여 이전에 회원자격을 상실한 적이 있는 경우\n
    ② 등록 내용에 허위, 기재누락, 오기가 있는 경우\n
    ③ 사회의 안녕과 질서, 미풍양속을 저해할 목적으로 신청한 경우\n
    ④ 부정한 용도로 본 서비스를 이용하고자 하는 경우\n
    ⑤ 서비스 정책과 위배 되어지는 행위를 반복적으로 자행하여 회원 자격 상실을 한 적이 있는 경우\n
    ⑥ 본 서비스와 경쟁관계에 있는 이용자가 신청하는 경우\n
    ⑦ 서비스 관련 설비에 여유가 없을 경우\n
    ⑧ 기술상의 장애사유가 있는 경우\n
    ⑨ 기타 귀책사유로 이용승낙이 곤란한 경우\n\n

    3. 회사는 다음과 같은 이용신청에 대하여 승낙하지 않으며 이미 등록된 신청을 취소할 수 있습니다.\n

    ① 신청된 이름이 신청인의 주민등록표상의 이름과 번호가 아닌 경우\n
    ② 가입신청서의 내용을 허위로 기재한 경우\n
    ③ 타인의 명의를 이용하여 가입한 경우\n
    ④ 사회의 안녕질서 및 미풍양속을 저해할 목적으로 가입한 경우\n
    ⑤ 서비스의 정상적인 제공을 저해하거나 타 이용자의 서비스 사용에 지장을 줄 것으로 예상되는 경우\n
    ⑥ 이용자가 법률을 위반하거나 기타 성인물을 취급할 경우\n
    ⑦ 이용 신청자가 만14세 미만의 미성년자인 경우에는 서비스 별 안내에서 정하는 바에 따라 승낙을 보류할 수 있습니다.\n\n

    4. 회원신청 시 기재된 사항이 변경 시 회원은 온라인의 정보수정을 통해 정보를 수정 하여야 하며, 회원정보의 미변경으로 인한 모든 문제의 책임은 회원에게 있습니다.\n
    </string>
</resources>