<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search_bold"
        android:icon="@drawable/search_bold"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_upload_01"
        android:icon="@drawable/upload_01"
        android:title="@string/title_upload" />

    <item
        android:id="@+id/navigation_basic"
        android:icon="@drawable/activity_basic"
        android:title="@string/title_basic" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/user"
        android:title="@string/title_user" />

</menu>